--- a/Vostok/material/templates/material/ver_material.html
+++ b/Vostok/material/templates/material/ver_material.html
@@ -74,7 +74,7 @@
                     <td>{{ material.descripcion }}</td>
                     <td>{{ material.cantidad }}</td>
                     <td><a
-                            href="{% url 'material:editar_material_view' material.id %}">
+                            href="{% url 'material:editar_material' material.id %}">
                         <button class="btn btn-success"><i class="fas fa-edit"></i>
                         </button>
                     </a></td>
