--- a/Vostok/ambulancia/templates/ambulancia/editar_ambulancia.html
+++ b/Vostok/ambulancia/templates/ambulancia/editar_ambulancia.html
@@ -2,15 +2,6 @@
 {% extends 'dashboard/base.html' %}
 {% load staticfiles %}
 {% block content %}
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-            crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-            crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-            crossorigin="anonymous"></script>
     <div class="row">
         <div class="col text-center m-3">
             <h1>Editar ambulancia {{ ambulancia.nombre }}</h1>
@@ -28,7 +19,7 @@
                 <div class="row">
                     <div class="col">
                         <div class="card-box">
-                            <form method="post" action="{% url "ambulancia:editar_ambulancias" ambulancia.id %}">
+                            <form method="post">
                                 {% csrf_token %}
                                 {{ form.as_p }}
                                 <div class="row">
@@ -38,8 +29,21 @@
                                         </button>
                                     </div>
                                     <div class="col-md-2 offset-md-8">
-                                        <button class="btn btn-success waves-effect waves-light" type="submit">Guardar
+                                        <button class="btn btn-success waves-effect waves-light" type="button" data-toggle="modal"
+                                                data-target="#modalSaved">Guardar
                                         </button>
+                                    </div>
+                                </div>
+                                <div class="modal" id="modalSaved" tabindex="-1" role="dialog" data-backdrop="static">
+                                    <div class="modal-dialog" role="document">
+                                        <div class="modal-content">
+                                            <div class="modal-body">
+                                                <p>Se han realizado cambios a la ambulancia</p>
+                                            </div>
+                                            <div class="modal-footer">
+                                                <button class="btn btn-success waves-effect waves-light" type="submit">De acuerdo</button>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                             </form>
@@ -52,7 +56,7 @@
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-body">
-                        <p>Si sales ahora no se guardará el material nuevo</p>
+                        <p>Si sales ahora no se guardarán los cambios en la ambulancia</p>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-primary" data-dismiss="modal">Continuar editando</button>
