--- a/Vostok/ambulancia/templates/ambulancia/ver_ambulancia.html
+++ b/Vostok/ambulancia/templates/ambulancia/ver_ambulancia.html
@@ -40,7 +40,7 @@
                             <th scope="row">{{ ambulancia.id }}</th>
                             <td>{{ ambulancia.nombre }}</td>
                             <td>{{ ambulancia.inventario.nombre }}</td>
-                            <td><a href="{% url "ambulancia:mostrar_editar"  id=ambulancia.id %}"
+                            <td><a href="{% url "ambulancia:editar_ambulancia"  pk=ambulancia.id %}"
                                    data-animation="blur" data-overlaycolor="#36404a">
                                 <button type="button" class=" btn btn-success"><i class="fas fa-edit"></i>
                                 </button>
