--- a/Vostok/material/templates/material/editar_material.html
+++ b/Vostok/material/templates/material/editar_material.html
@@ -1,64 +1,69 @@
-<!--######VIEW US38 #######-->
+<!-- ######## VIEW US45 ######## -->
 {% extends 'dashboard/base.html' %}
-
 {% load staticfiles %}
-
 {% block content %}
+    <div class="row">
+        <div class="col text-center m-3">
+            <h1>Editar ambulancia {{ ambulancia.nombre }}</h1>
+        </div>
+    </div>
     <div class="container-fluid">
-        {% if user.is_authenticated %}
-            <h1 align="center"><i class="zmdi zmdi-shape"> </i>Editar Material {{ material.nombre }}</h1>
-
-            <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-8 offset-lg-2">
                 <div class="row">
-                    <div class="col-md-8 offset-lg-2">
-                        <div class="row">
-                            <div class="col mb-3">
-                                <a href="{% url 'material:ver_material' %}"><button class="btn btn-dark" type="button" data-toggle="modal"
-                                        data-target="#modalCancel"><i
-                                        class="fas fa-arrow-left"></i></button></a>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col">
-                                <div class="card-box">
-                                    <form method="post" action="{% url "material:edit" material.id %}">
-                                        {% csrf_token %}
-                                        <div class="modal-body">
-                                            {{ form.as_p }}
-                                        </div>
-                                        <div class="row">
+                    <div class="col mb-3">
+                        <button class="btn btn-dark" type="button" data-toggle="modal" data-target="#modalCancel"><i
+                                class="fas fa-arrow-left"></i></button>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <div class="card-box">
+                            <form method="post">
+                                {% csrf_token %}
+                                {{ form.as_p }}
+                                <div class="row">
                                     <div class="col-md-2">
-                                        <a href="{% url 'material:ver_material' %}"><button class="btn btn-danger" type="button" data-toggle="modal"
+                                        <button class="btn btn-danger" type="button" data-toggle="modal"
                                                 data-target="#modalCancel">Cancelar
-                                        </button></a>
+                                        </button>
                                     </div>
                                     <div class="col-md-2 offset-md-8">
-                                        <button class="btn btn-success waves-effect waves-light" type="submit">Guardar
+                                        <button class="btn btn-success waves-effect waves-light" type="button" data-toggle="modal"
+                                                data-target="#modalSaved">Guardar
                                         </button>
                                     </div>
                                 </div>
-                                    </form>
-
-                                    <!-- #### US#34 #### -->
-                                </div> <!-- end row -->
-                                </tbody>
-                                </table>
-                            </div> <!-- container-fluid -->
+                                <div class="modal" id="modalSaved" tabindex="-1" role="dialog" data-backdrop="static">
+                                    <div class="modal-dialog" role="document">
+                                        <div class="modal-content">
+                                            <div class="modal-body">
+                                                <p>Se han realizado cambios al material</p>
+                                            </div>
+                                            <div class="modal-footer">
+                                                <button class="btn btn-success waves-effect waves-light" type="submit">De acuerdo</button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </form>
                         </div>
                     </div>
                 </div>
             </div>
+        </div>
+        <div class="modal" id="modalCancel" tabindex="-1" role="dialog">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-body">
+                        <p>Si sales ahora no se guardarán los cambios en el material</p>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-primary" data-dismiss="modal">Continuar editando</button>
+                        <a href="/ambulancia/ver/" class="btn btn-danger">Salir sin guardar</a>
+                    </div>
+                </div>
             </div>
-            </div>
-
-
-
-        {% else %}
-            <h1>No estas autenticado</h1>
-        {% endif %}
-
-
+        </div>
+    </div>
 {% endblock %}
-
-<!--######VIEW US38 #######-->
-
