--- a/Vostok/revision/templates/revision/ver_detalle_revision.html
+++ b/Vostok/revision/templates/revision/ver_detalle_revision.html
@@ -9,7 +9,9 @@
 
     {% if  materiales %}
         <h4>Ambulancia: {{ ambulancia.nombre }}</h4>
-        <h4>Fecha de revision: {{ fecha }}</h4>
+        <h4>Fecha de revision: {{ revision.fecha }}</h4>
+        <h4>Paramedico Encargado: {{ revision.nombre_paramedico }}</h4>
+        <h4>Correo: {{ revision.email_paramedico }}</h4>
 
         <p align="right"><a href="{% url "revision:revisiones" id=ambulancia.id %}">
             <button class="btn btn-primary btn-rounded width-md waves-effect waves-light">Regresar a revisiones</button>
