Login bien con logout

--- a/Vostok/dashboard/templates/dashboard/base.html
+++ b/Vostok/dashboard/templates/dashboard/base.html
@@ -75,7 +75,7 @@
                                 <!-- item-->
                                 <a href="javascript:void(0);" class="dropdown-item notify-item">
                                     <i class="fe-log-out"></i>
-                                    <span>Logout</span>
+                                    <a href="{% url 'logout' %}"><span>Logout</span></a>
                                 </a>
 
                             </div>
