--- a/Vostok/dashboard/templates/dashboard/index.html
+++ b/Vostok/dashboard/templates/dashboard/index.html
@@ -5,7 +5,8 @@
 
 {% block content %}
     <h1>Logged as</h1>
-    <h3>{{ user.username }}</h3>
+    <h3>Username: {{ user.username }}</h3>
+    <h3>Email: {{ user.email }}</h3>
 
 {% endblock %}
 <!-- Template US-14 -->
