--- a/Vostok/revision/templates/revision/ver_revisiones_ambulancia.html
+++ b/Vostok/revision/templates/revision/ver_revisiones_ambulancia.html
@@ -28,15 +28,16 @@
 
                         <td>{{ ambulancia.nombre }}</td>
                         <td>{{ revision.fecha }}</td>
-                        <td><a href="{%url 'revision:detalle_ambulancia' id=ambulancia.id id_revision=revision.id %}">
+                        <td><a href="{% url 'revision:detalle_ambulancia' id=ambulancia.id id_revision=revision.id %}">
                             <button class="btn btn-primary btn-rounded width-md waves-effect waves-light">Ver detalle
                             </button>
                         </a></td>
 
                     </tr>
+
+                {% endfor %}
                 </tbody>
             </table>
-                {% endfor %}
         </div>
 
     {% else %}
@@ -53,7 +54,8 @@
                                 <div class="text-center">
                                     <h1 class="text-error">500</h1>
                                     <h3 class="mt-3 mb-2">Error de servidor</h3>
-                                    <p class="text-muted mb-3">No se encontro ninguna revision del ESTADO de esta ambulancia.
+                                    <p class="text-muted mb-3">No se encontro ninguna revision del ESTADO de esta
+                                        ambulancia.
                                         Consultar a administrador </p>
 
                                     <a href="/index/"><i class="fas fa-home mr-1"></i> Regresar a ambulancias</a>
