--- a/Vostok/inventario/templates/inventario/ver_material_inventario.html
+++ b/Vostok/inventario/templates/inventario/ver_material_inventario.html
@@ -5,7 +5,7 @@
 
     <!--  Template US-5  -->
     <div class="container-fluid">
-        {% if user.is_authenticated %}
+        {% if inventarios  %}
             <br>
 
             <div class="row">
@@ -158,6 +158,36 @@
 
 
         {% else %}
-            <h1>No estas autenticado</h1>
+            <div class="account-pages mt-5 mb-5">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-md-8 col-lg-6 col-xl-5">
+
+                        <div class="card">
+
+                            <div class="card-body p-4">
+
+                                <div class="text-center">
+                                    <h1 class="text-error">500</h1>
+                                    <h3 class="mt-3 mb-2">Error de servidor</h3>
+                                    <p class="text-muted mb-3">No se encontro ninguna material.
+                                        Consultar a administrador </p>
+
+                                    <a href="/index/"><i class="fas fa-home mr-1"></i> Regresar al Inicio</a>
+                                </div>
+
+
+                            </div> <!-- end card-body -->
+                        </div>
+                        <!-- end card -->
+
+                    </div> <!-- end col -->
+                </div>
+                <!-- end row -->
+            </div>
+            <!-- end container -->
+        </div>
+        <!-- end page -->
+
         {% endif %}
 {% endblock %}
