--- a/Vostok/revision/templates/revision/ver_revisiones.html
+++ b/Vostok/revision/templates/revision/ver_revisiones.html
@@ -7,6 +7,13 @@
     <h2>Historial de revisiones de inventarios</h2>
 
     {% if  registros %}
+        <br>
+        <div class="row">
+            <div class="col mb-3">
+                    <a href="{%  url 'ambulancia:ver_ambulancias' %}"><button class="btn btn-dark" type="button" ><i
+                        class="fas fa-arrow-left"></i></button></a>
+            </div>
+        </div>
         <div class="card-box">
         <br>
 
