--- a/Vostok/users/templates/users/ver_detalle_usuario.html
+++ b/Vostok/users/templates/users/ver_detalle_usuario.html
@@ -1,4 +1,4 @@
-<!--######VIEW US10 #######-->
+<!--######VIEW US12 #######-->
 {% extends 'dashboard/base.html' %}
 
 {% load staticfiles %}
@@ -7,65 +7,22 @@
 
     <div class="container-fluid">
         <div>
-            <h1><i class="zmdi zmdi-shape"> </i>Usuarios</h1></div>
-        <div class="row">
-            <div class="col-8">
-
-                <div id="datatable_filter" class="dataTables_filter"><label>Buscar: (sólo está ahí de bonito, no funcional)<input
-                        type="search" class="form-control form-control-sm" placeholder="Nombre de usuario..."
-                        aria-controls="datatable" id="myInput" onkeyup="Filter()"></label></div>
-            </div>
-            <div class="col-4">
-                <button class="btn btn-primary waves-effect waves-light" data-toggle="modal" data-target="#myModal">¿Qué significa cada rol?</button>
-            </div>
+            <h1><i class="zmdi zmdi-shape"> </i>Usuarios</h1>
         </div>
-        <br>
-        <br>
-
-        <table class="table table-hover table-dark" id="Materiales">
-            <tbody>
-
+        <div class="card-box">
             <div class="row">
-                <div class="col-sm-12">
-
-
-            <thead>
-            <tr role="row" align="center">
-                <th scope="col">
-                    ID#
-                </th>
-                <th scope="col">
-                    Username
-                </th>
-                <th scope="col">
-                    Email
-                </th>
-                <th scope="col">
-                    Nombre
-                </th>
-                <th scope="col">
-                    Apellido(s)
-                </th>
-                <th scope="col">
-                    Rol
-                </th>
-         <th scope="col">
-                    Editar Rol
-                </th>
-            </thead>
-
-
-            <tbody align="center">
-            {% for usuario in usuarios %}
-
-                <tr role="row" class="odd">
-                    <td tabindex="0" class="sorting_1">{{ usuario.id }}</td>
-                    <td>{{ usuario.username }}</td>
-                    <td>{{ usuario.email }}</td>
-                    <td>{{ usuario.first_name }}</td>
-                    <td>{{ usuario.last_name }}</td>
-                    <td>
-                        {% if usuario.is_anon %}
+                <h2>Información del usuario: {{ usuario.username }}</h2>
+            </div>
+            <br>
+            <div class="row">
+                <p>
+                    <strong>Nombre: </strong>{{ usuario.first_name }}
+                    <br>
+                    <strong>Apellido(s): </strong>{{ usuario.last_name }}
+                    <br>
+                    <strong>Email: </strong>{{ usuario.email }}
+                    <br>
+                    <strong>Rol: </strong>{% if usuario.is_anon %}
                             Anónimo
                             {% elif usuario.is_voluntario %}
                             Voluntario
@@ -74,18 +31,22 @@
                             {% elif usuario.is_adminplus %}
                             Admin Plus
                         {% endif %}
-                    </td>
+                    <br>
+                    <strong>Celular: </strong>{{ usuario.cellphone }}
+                    <br>
+                    <strong>Fecha de Nacimiento: </strong>{{ usuario.date_of_birth }}
+                </p>
+            </div>
 
-                     <td><a href="{% url "users:detalle_usuario"  id=usuario.id %}"
-                                   data-animation="blur" data-overlaycolor="#36404a">
-                                <button type="button" class=" btn btn-success"><i class="mdi mdi-account"></i>
-                                </button>
-                            </a></td>
+                <form method="POST">
+                    {% csrf_token %}
+                    {{  form.as_p }}
+                    <button type="submit" name="action" class=" btn btn-success">Guardar</button>
+                </form>
 
-                </tr>
-            {% endfor %}
-            </tbody>
-        </table>
+        </div>
+
+
     </div>
 
     <div id="myModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
@@ -134,5 +95,5 @@
 
 {% endblock %}
 
-<!--######VIEW US10 #######-->
+<!--######VIEW US12 #######-->
 
