--- a/Vostok/users/templates/users/ver_usuarios.html
+++ b/Vostok/users/templates/users/ver_usuarios.html
@@ -11,7 +11,7 @@
         <div class="row">
             <div class="col-8">
 
-                <div id="datatable_filter" class="dataTables_filter"><label>Buscar: (sólo está ahí de bonito, no funcional)<input
+                <div id="datatable_filter" class="dataTables_filter"><label>Buscar:<input
                         type="search" class="form-control form-control-sm" placeholder="Nombre de usuario..."
                         aria-controls="datatable" id="myInput" onkeyup="Filter()"></label></div>
             </div>
@@ -22,7 +22,7 @@
         <br>
         <br>
 
-        <table class="table table-hover table-dark" id="Materiales">
+        <table class="table table-hover table-dark" id="usuarios">
             <tbody>
 
             <div class="row">
@@ -44,13 +44,16 @@
                     Apellido(s)
                 </th>
                 <th scope="col">
-                    Telefono
+                    Teléfono
                 </th>
                 <th scope="col">
                     Rol
                 </th>
+                 <th scope="col">
+                    Turno
+                </th>
          <th scope="col">
-                    Editar Rol
+                    Editar Rol/Turno
                 </th>
             </thead>
 
@@ -65,6 +68,7 @@
                     <td>{{ usuario.last_name }}</td>
                     <td>{{ usuario.cellphone }}</td>
 
+
                     <td>
                         {% if usuario.is_anon %}
                             Anónimo
@@ -76,6 +80,7 @@
                             Admin Plus
                         {% endif %}
                     </td>
+                <td>{{ usuario.get_turno_display }}</td>
 
                      <td><a href="{% url "users:detalle_usuario"  id=usuario.id %}"
                                    data-animation="blur" data-overlaycolor="#36404a">
@@ -101,28 +106,30 @@
                     <p>
                         No tiene acceso a ninguna funcionalidad del sistema.
                         <br>
-                        Sólo puede ver la información de su cuenta.
+                        Sólo puede ver y editar la información de su cuenta.
                     <p>
                     <hr>
                     <h4>Voluntario</h4>
                     <p>
-                        No tiene acceso a ninguna funcionalidad del sistema.
+                        Puede ver los inventarios, materiales y ambulancias.
                         <br>
-                        Sólo puede ver la información de su cuenta.
+                        Sólo puede ver la información.
                     <p>
                     <hr>
                     <h4>Administrador</h4>
                     <p>
-                        No tiene acceso a ninguna funcionalidad del sistema.
+                        Puede editar y eliminar información de los materiales, inventarios y ambulancias..
                         <br>
-                        Sólo puede ver la información de su cuenta.
+                        Puede hacer todo lo que el Voluntario puede también.
                     <p>
                     <hr>
                     <h4>Admin Plus</h4>
                     <p>
-                        No tiene acceso a ninguna funcionalidad del sistema.
+                        Tiene acceso a todas las funcionalidades del sistema.
                         <br>
-                        Sólo puede ver la información de su cuenta.
+                        Tiene control sobre el sistema de usuarios para editar sus roles y turnos.
+                        <br>
+                        Puede hacer todo lo que un Administrador y Voluntario pueden.
                     <p>
                 </div>
                 <div class="modal-footer">
@@ -132,6 +139,27 @@
         </div><!-- /.modal-dialog -->
     </div>
 
+
+    <script>
+        function Filter() {
+            var input, filter, table, tr, td, i, txtValue;
+            input = document.getElementById("myInput");
+            filter = input.value.toUpperCase();
+            table = document.getElementById("usuarios");
+            tr = table.getElementsByTagName("tr");
+            for (i = 0; i < tr.length; i++) {
+                td = tr[i].getElementsByTagName("td")[1];
+                if (td) {
+                    txtValue = td.textContent || td.innerText;
+                    if (txtValue.toUpperCase().indexOf(filter) > -1) {
+                        tr[i].style.display = "";
+                    } else {
+                        tr[i].style.display = "none";
+                    }
+                }
+            }
+        }
+    </script>
 
 {% endblock %}
 
