--- a/Vostok/revision/templates/revision/ver_detalle_ambulancia.html
+++ b/Vostok/revision/templates/revision/ver_detalle_ambulancia.html
@@ -13,29 +13,30 @@
                 <li class="list-group-item">Ambulancia: {{ ambulancia.nombre }}</li>
                 <li class="list-group-item">Responsable: {{ revision.nombre_paramedico }}</li>
                 <li class="list-group-item">Fecha: {{ revision.fecha }}</li>
+                <li class="list-group-item">Observaciones: <p>{{ revision.observaciones }}</p></li>
             </ul>
-
-
         </div>
         <br><br>
         <div class="table-responsive">
             <table class="table table-dark mb-0">
                 <thead align="center">
-                <tr>
-                    <th>Componente</th>
-                    <th>Esperado</th>
-                    <th>Actual</th>
-
-                </tr>
+                    <tr>
+                        <th>Componente</th>
+                        <th>Esperado</th>
+                        <th>Actual</th>
+                    </tr>
                 </thead>
                 <tbody align="center">
-                <tr>
-
-                    <td>Gasolina</td>
-                    <td>50 litros</td>
-                    <td>15 litros</td>
-
-                </tr>
+                    <tr>
+                        <td>Gasolina</td>
+                        <td>{{ ambulancia.objetivo_gasolina }}</td>
+                        <td>{{ revision.gasolina }}</td>
+                    </tr>
+                    <tr>
+                        <td>Líquido de frenos</td>
+                        <td>{{ ambulancia.objetivo_liquido_frenos}}</td>
+                        <td>{{ revision.liquido_frenos }}</td>
+                    </tr>
                 </tbody>
             </table>
         </div>
