--- a/Vostok/revision/templates/revision/ver_revisiones.html
+++ b/Vostok/revision/templates/revision/ver_revisiones.html
@@ -56,12 +56,12 @@
                             <div class="card-body p-4">
 
                                 <div class="text-center">
-                                    <h1 class="text-error">500</h1>
-                                    <h3 class="mt-3 mb-2">Error de servidor</h3>
+                                    <h1 class="text-error">:(</h1>
+                                    <h3 class="mt-3 mb-2">No hay elementos que mostrar.</h3>
                                     <p class="text-muted mb-3">No se encontro ninguna revision de esta ambulancia.
                                         Consultar a administrador </p>
 
-                                    <a href="/index/"><i class="fas fa-home mr-1"></i> Regresar a ambulancias</a>
+                                    <a href="{% url 'ambulancia:ver_ambulancias' %}"><i class="fas fa-home mr-1"></i> Regresar a ambulancias</a>
                                 </div>
 
 
