--- a/Vostok/users/templates/users/ver_usuarios.html
+++ b/Vostok/users/templates/users/ver_usuarios.html
@@ -118,7 +118,9 @@
                     <hr>
                     <h4>Administrador</h4>
                     <p>
-                        Puede editar y eliminar información de los materiales, inventarios y ambulancias..
+                        Puede crear, editar y eliminar información de los materiales, inventarios y ambulancias.
+                        <br>
+                        Tiene los permisos para supervisar los detalles de las revisiones.
                         <br>
                         Puede hacer todo lo que el Voluntario puede también.
                     <p>
