--- a/Vostok/inventario/templates/inventario/agregar_material_inventario.html
+++ b/Vostok/inventario/templates/inventario/agregar_material_inventario.html
@@ -40,7 +40,7 @@
                                                 data-target="#modalCancel">Cancelar
                                         </button>
                                     </div>
-                                    <div class="col-md-2 offset-md-8">
+                                    <div class="col-md-2">
                                         <button class="btn btn-success waves-effect waves-light" type="submit">Guardar
                                         </button>
                                     </div>
