--- a/Vostok/material/templates/material/ver_material.html
+++ b/Vostok/material/templates/material/ver_material.html
@@ -16,6 +16,8 @@
                         aria-controls="datatable" id="myInput" onkeyup="Filter()"></label></div>
 
             </div>
+
+            {% if user.is_administrador or user.is_adminplus %}
             <div class="col">
                 <br>
                 <a href="{% url 'material:crear' %}">
@@ -25,6 +27,8 @@
                     </button>
                 </a>
             </div>
+            {% endif %}
+
         </div>
         <br>
         <table class="table table-hover table-dark" id="Materiales">
@@ -48,12 +52,14 @@
                 <th scope="col">
                     Cantidad
                 </th>
+                {% if user.is_administrador or user.is_adminplus %}
                 <th scope="col">
                     Editar
                 </th>
                 <th scope="col">
                     Eliminar
                 </th>
+        {% endif %}
             </thead>
 
 
@@ -65,6 +71,7 @@
                     <td>{{ material.nombre }}</td>
                     <td>{{ material.descripcion }}</td>
                     <td>{{ material.cantidad }}</td>
+                    {% if user.is_administrador or user.is_adminplus %}
                     <td><a
                             href="{% url 'material:editar_material' material.id %}">
                         <button class="btn btn-success"><i class="fas fa-edit"></i>
@@ -79,6 +86,7 @@
                                 data-target="#modalConfirmacion"><i
                                 class="fas fa-trash"></i></button>
                     </a></td>
+                {% endif %}
                 </tr>
             {% endfor %}
             </tbody>
