--- a/Vostok/revision/templates/revision/ver_detalle_ambulancia.html
+++ b/Vostok/revision/templates/revision/ver_detalle_ambulancia.html
@@ -51,8 +51,8 @@
                         <div class="card-body p-4">
 
                             <div class="text-center">
-                                <h1 class="text-error">500</h1>
-                                <h3 class="mt-3 mb-2">Error de servidor</h3>
+                                <h1 class="text-error">:(</h1>
+                                <h3 class="mt-3 mb-2">No hay elementos para mostrar.</h3>
                                 <p class="text-muted mb-3">No se encontro ninguna revision del ESTADO de esta
                                     ambulancia.
                                     Consultar a administrador </p>
