--- a/Vostok/revision/templates/revision/ver_detalle_revision.html
+++ b/Vostok/revision/templates/revision/ver_detalle_revision.html
@@ -64,9 +64,9 @@
                             <div class="card-body p-4">
 
                                 <div class="text-center">
-                                    <h1 class="text-error">500</h1>
-                                    <h3 class="mt-3 mb-2">Error de servidor</h3>
-                                    <p class="text-muted mb-3">No se encuentran materiales de esta revision</p>
+                                    <h1 class="text-error">:(</h1>
+                                    <h3 class="mt-3 mb-2">No hay elementos que mostrar.</h3>
+                                    <p class="text-muted mb-3">No se encuentran materiales de esta revision.</p>
 
                                     <a href="{% url "revision:revisiones" id=ambulancia.id %}">
                                         <button class="btn btn-primary btn-rounded width-md waves-effect waves-light">
