agregar campo de usuario a revision agregar usuario a revisión cuando se hace el posten revisiones de inventario y de estado de ambulancia mostrar los datos del usuario en lugar de los de la revisión en las views de ver revisiones y ver detalle de revisionespara los dos casos mostrar turno en ver revisiones y ver detalle revisiones

--- a/Vostok/revision/templates/revision/ver_detalle_ambulancia.html
+++ b/Vostok/revision/templates/revision/ver_detalle_ambulancia.html
@@ -11,7 +11,8 @@
         <div class="table-responsive">
             <ul class="list-group list-group-flush">
                 <li class="list-group-item">Ambulancia: {{ ambulancia.nombre }}</li>
-                <li class="list-group-item">Responsable: {{ revision.nombre_paramedico }}</li>
+                <li class="list-group-item">Responsable: {{ revision.usuario.first_name }} {{ revision.usuario.last_name }}</li>
+                <li class="list-group-item">Guardia: {{ revision.usuario.turno }}</li>
                 <li class="list-group-item">Fecha: {{ revision.fecha }}</li>
                 <li class="list-group-item">Observaciones: <p>{{ revision.observaciones }}</p></li>
             </ul>
