--- a/Vostok/users/templates/users/ver_detalle_usuario.html
+++ b/Vostok/users/templates/users/ver_detalle_usuario.html
@@ -8,6 +8,9 @@
     <div class="container-fluid">
         <div>
             <h1><i class="zmdi zmdi-shape"> </i>Usuarios</h1>
+            <a href="{% url 'users:ver_usuarios' %}">
+            <button class="btn btn-dark" type="button" data-toggle="modal" data-target="#modalCancel"><i
+                                class="fas fa-arrow-left"></i></button></a>
         </div>
         <div class="card-box">
             <div class="row">
@@ -21,6 +24,8 @@
                     <strong>Apellido(s): </strong>{{ usuario.last_name }}
                     <br>
                     <strong>Email: </strong>{{ usuario.email }}
+                    <br>
+                    <strong>Turno: </strong>{{ usuario.get_turno_display }}
                     <br>
                     <strong>Rol: </strong>{% if usuario.is_anon %}
                             Anónimo
@@ -40,7 +45,33 @@
 
                 <form method="POST">
                     {% csrf_token %}
-                    {{  form.as_p }}
+                    <div class="form-group row">
+                        <label class ="col-sm-2 col-form-label">Turno:</label>
+                        <div class="col-sm-10">
+                            <select class="form-control" name="turno">
+                                <option value="0">Sin cambios</option>
+                                <option value="1">Nocturno Viernes</option>
+                                <option value="2">Diurno Sábado</option>
+                                <option value="3">Nocturno Sábado</option>
+                                <option value="4">Diurno Domingo</option>
+                                <option value="5">Nocturno Domingo</option>
+                            </select>
+                        </div>
+                    </div>
+
+                    <div class="form-group row">
+                        <label class ="col-sm-2 col-form-label">Rol:</label>
+                        <div class="col-sm-10">
+                            <select class="form-control" name="rol">
+                                <option value="0">Sin cambios</option>
+                                <option value="1">Anónimo</option>
+                                <option value="2">Voluntario</option>
+                                <option value="3">Administrador</option>
+                                <option value="4">Admin Plus</option>
+                            </select>
+                        </div>
+                    </div>
+
                     <button type="submit" name="action" class=" btn btn-success" onsubmit=alert()>Guardar</button>
                 </form>
 
